--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html{
-    background-color: aliceblue;
+    background-color: rgb(137, 255, 245);
     border-Width: 10pt;
     border-style: ridge;
     border-color:coral;
