--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html{
     background-color: rgb(137, 255, 245);
     align-content: center;
     text-align: center;
+    height: 100%;
 }
 .title{
     font-size: 48pt;
@@ -28,7 +29,8 @@ body{
 
 #image{
     width: fit-content;
-    max-height: fit-content;
+    max-height: 50%;
+    max-width: 75%;
     border-width: 8pt;
     border-style: ridge;
     border-color:blanchedalmond;
